# video-tagger

./: .gitignore  config.default.toml  config.toml  pyproject.toml  readme.md  requirements.txt
csv/: .gitkeep
media/: .gitkeep  media-sources.md
video-tagger/: main.py
video_tagger/: main.py
video_tagger/app/: __init__.py  video_player.py
video_tagger/app/ui/: __init__.py  button.py
video_tagger/media/icons/: media-sources.md
video_tagger/util/: __init__.py  config.py  csvline.py
